<resources>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About KSWEB</string>
    <string name="aboutText">" &lt;small>Thank you for choosing KSWEB!&lt;br> &lt;br> %1$s (Build %2$s):&lt;br> &lt;br> %3$s&lt;br> &lt;br> System information:&lt;br> &lt;br> %4$s&lt;br> &lt;br> KSLABS ltd. 2012-%5$s&lt;br> Our site: &lt;a href = https://kslabs.ru>https://kslabs.ru&lt;/a>&lt;br> Our e-mail address: dkcocto@gmail.com&lt;/small> "</string>
    <string name="activateBnt">ACTIVATE</string>
    <string name="activateInterfaceProtectionSettingCaption">To activate protection set password</string>
    <string name="activateInterfaceProtectionSettingText">Set Password</string>
    <string name="activateRoute">Activate</string>
    <string name="activeRoutes">Active routes</string>
    <string name="addBtn">+</string>
    <string name="addCmdBeforeStartComponentDialogTitle">Set Console Command</string>
    <string name="addCmdBeforeStartComponentHint">This console command will execute before selected component start. You can set command sequence using \"Enter\" as a delimiter for them.</string>
    <string name="addHost">Add Host</string>
    <string name="addHostForTool">Now KSWEB have added a new host {localhost: %1$s} to selected server! Click \"OK\" to restart the server. After that you can click on this tool again to open it in your browser.</string>
    <string name="addHostForWebInterface">Now KSWEB have added a new host {localhost: %1$s} to selected server! Click \"OK\" to restart the server. After that You can click start WebFace again to open it in your browser. &lt;br>&lt;br>Web Interface login and password by default: \"admin\". We strongly recommend to change the password for security reasons!</string>
    <string name="addJob">Add Job</string>
    <string name="addRoute">ADD ROUTE</string>
    <string name="addToLog">Add job to log</string>
    <string name="addUser">New User</string>
    <string name="agree">Agree</string>
    <string name="allFieldsMustBeFilled">All fields must be filled!</string>
    <string name="allFilesAccessDialogMsg">For the correct operation of servers and other functions of KSWEB, you need to provide access to the internal memory of your device.</string>
    <string name="allFilesAccessDialogTitle">Request</string>
    <string name="allowFilesModify">Allow Files Modify</string>
    <string name="allowRoot">Allow to use root</string>
    <string name="alreadyHaveExtensionFromStandardToPro">You already have a license extension from Standard to PRO in your active purchases. Please, purchase a standard version to activate your PRO license</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="announcement">Announcement</string>
    <string name="anonymIsExist">Anonymous user already exists!</string>
    <string name="anonymWasAdded">Anonymous user was successfully added!</string>
    <string name="apacheActivatingTxt">Apache does not activated!</string>
    <string name="apacheInTrialModeMsg">After the end of the test period of KSWEB Apache server functions will be available only in KSWEB PRO.</string>
    <string name="apacheServer">Apache</string>
    <string name="app_name">KSWEB</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="areYouSureToDeleteRoute">Are you sure that you want to delete route: %1$s -> %2$s?</string>
    <string name="areYouSureToResetLicense">Are you sure that you want to reset your license?</string>
    <string name="autoStart">Auto start</string>
    <string name="autostartAdditionCaption">KSWEB Autostart (disabling battery optimization is highly recommended)</string>
    <string name="back">BACK</string>
    <string name="backupManager">Backup</string>
    <string name="backupManagerDelete">Delete</string>
    <string name="backupManagerRestore">Restore</string>
    <string name="batterySaving">Turn off battery saving</string>
    <string name="billingClientCouldNotConnect">&lt;i>&lt;b>Warning!&lt;/b> KSWEB was &lt;b>unable to connect to the Google Play billing service&lt;/b>. This may mean that there are no Google Play services on your device. You can contact us or read the information on our website for further clarification.&lt;br> &lt;br>&lt;/i></string>
    <string name="binariesUpdatingProcessDialogMsg">Please wait...</string>
    <string name="binariesUpdatingProcessDialogTitle">Updating Process</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="buyKSWEB">BUY KSWEB</string>
    <string name="buyKSWEBDialogTxt">%1$s Choose a variant which is the most convenient for you!&lt;br/> &lt;br/> &lt;b>KSWEB Standard %2$s&lt;/b> includes base components such as lighttpd server, PHP, MySQL and &lt;b>the text editor&lt;/b> with a code highlighting feature. The text editor can highlight codes of HTML, CSS, JS in KSWEB Standard version. Suitable for most of your web project launching needs.&lt;br/> &lt;br/> &lt;b>KSWEB PRO %3$s&lt;/b> includes addition features such as &lt;b>nginx&lt;/b> server, &lt;b>Apache&lt;/b> server, possibility to choose php version, port routing, scheduler as well as flexible licensing. The text editor in KSWEB PRO highlights PHP code. Expands the range of tasks to be solved. Suitable for business.&lt;br/> &lt;br/> You can always upgrade your &lt;b>Standard version of KSWEB to PRO %4$s&lt;/b>at any time.</string>
    <string name="buyKSWEBSettingItem">Buy</string>
    <string name="buyOnGooglePlay">BUY</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="canNotDeleteGeneralHost">"You can't delete general host!"</string>
    <string name="cancel">Cancel</string>
    <string name="cantFindCertificateFile">"Can't find certificate file!"</string>
    <string name="cantFindPrivateKeyFile">"Can't find private key file!"</string>
    <string name="cantReadWriteStoragePath">"KSWEB couldn't read/write to this path!"</string>
    <string name="certificatePath">Path to certificate in PEM format</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkCronExpressionBtn">CHECK EXPRESSION</string>
    <string name="checkingLicense">Please wait... Checking license...</string>
    <string name="clearOutput">Clear Output</string>
    <string name="cmdBeforeStartComponent">Console command</string>
    <string name="composerSelectCustomProjectDir">Select Project Dir</string>
    <string name="composerSelectProjectDirFromHost">Select Project Dir From Host</string>
    <string name="editBtn">EDIT</string>
    <string name="enableServer">Enable Server</string>
    <string name="externalRoute">External</string>
    <string name="feedbackMessageFieldHint">Message</string>
    <string name="feedbackMessageLeftChar">%1$s of 300</string>
    <string name="feedbackMessageTxtHint">Please briefly describe your problem:</string>
    <string name="feedbackRequestOption1">Having problems with the app purchase process</string>
    <string name="feedbackRequestOption2">Having problems activating the trial period</string>
    <string name="feedbackRequestOtherProblem">Other problem</string>
    <string name="feedbackResponseEmailFieldHint">E-mail</string>
    <string name="feedbackResponseEmailTxtHint">Please provide an email address where we can send you recommendations to solve your problem.</string>
    <string name="feedbackStandardRequestOptions">Please select the type of request from the list below:</string>
    <string name="feedbackYouCanChooseStandardQueryOption">You can choose a standard query option or you can ask a custom question.</string>
    <string name="fileInfoMenuItem">File Info</string>
    <string name="hostManager">Hosts</string>
    <string name="licensing">Licensing</string>
    <string name="lighttpdServer">Lighttpd</string>
    <string name="localeRoute">Locale</string>
    <string name="logFile">Log file</string>
    <string name="menuBtn">Menu</string>
    <string name="newMenuItem">New</string>
    <string name="nginxConfig">Сonfiguration</string>
    <string name="nginxServer">Nginx</string>
    <string name="noipHost">Host</string>
    <string name="noipLogin">Login</string>
    <string name="open">OPEN</string>
    <string name="openMenuItem">Open</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="redoMenuItem">Redo</string>
    <string name="routeToPort">Route to port</string>
    <string name="saveAsMenuItem">Save As</string>
    <string name="saveMenuItem">Save</string>
    <string name="searchAndReplaceMenuItem">Search and Replace</string>
    <string name="setBtn">SET</string>
    <string name="startInBrowserMenuItem">Start in browser</string>
    <string name="systemHostsTitle">File hosts</string>
    <string name="systemHostsUpdate">UPDATE</string>
    <string name="undoMenuItem">Undo</string>
    <string name="updateComposer">Update Composer</string>
    <string name="withRoot">(root)</string>
</resources>