<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RadioGroup
        android:id="@id/serversRadioGroup"
        android:layout_width="300.0dip"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@id/lighttpdRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:checked="true"
            android:text="@string/lighttpdServer" />
        <RadioButton
            android:id="@id/nginxRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:text="@string/nginxServer" />
        <RadioButton
            android:id="@id/apacheRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apacheServer" />
    </RadioGroup>
</LinearLayout>