<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:paddingTop="20.0dip"
    android:paddingBottom="10.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enableServer"
            style="@style/TextViewStyle" />
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="120.0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10.0dip">
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@id/enableServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip">
        <TextView
            android:id="@id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nginxConfig"
            style="@style/TextViewStyle" />
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@id/editServerConfigBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120.0dip"
                android:text="@string/editBtn"
                style="@style/ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@id/updateFileHostsContainer"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/systemHostsTitle"
            style="@style/TextViewStyle" />
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@id/updateHosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120.0dip"
                android:text="@string/systemHostsUpdate"
                style="@style/ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logFile"
            style="@style/TextViewStyle" />
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@id/openLogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120.0dip"
                android:text="@string/open"
                style="@style/ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@id/openCMDBeforeStartContainer"
        android:paddingLeft="30.0dip"
        android:paddingRight="30.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmdBeforeStartComponent"
            style="@style/TextViewStyle" />
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@id/openCMDBeforeStartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="120.0dip"
                android:text="@string/setBtn"
                style="@style/ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:paddingLeft="15.0dip"
        android:paddingTop="10.0dip"
        android:paddingRight="15.0dip"
        android:paddingBottom="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:id="@id/tv7"
            android:padding="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="50.0dip"
            android:maxWidth="80.0dip"
            android:text="@string/hostManager"
            android:singleLine="true"
            style="@style/TextViewStyle" />
        <TextView
            android:gravity="center_vertical"
            android:id="@id/usingRootTextView"
            android:padding="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="50.0dip"
            android:text="@string/withRoot"
            android:layout_toRightOf="@id/tv7"
            android:layout_toEndOf="@id/tv7"
            style="@style/TextViewStyle" />
    </RelativeLayout>
</LinearLayout>