<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <ru.kslabs.ksweb.view.Card
        android:id="@id/apacheActivatingCard"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="30.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginBottom="10.0dip"
        custom:cardTitleText="@string/licensing">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@id/apacheLicenseCardTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20.0dip"
                android:text="@string/apacheActivatingTxt"
                style="@style/TextViewStyle" />
            <Button
                android:id="@id/activateApacheBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:text="@string/activateBnt"
                style="@style/ButtonStyle" />
        </LinearLayout>
    </ru.kslabs.ksweb.view.Card>
    <ListView
        android:id="@id/hostManagerList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/apacheActivatingCard"
        style="@style/MyListView" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@id/addHostBtn"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15.0dip"
        android:layout_marginBottom="20.0dip"
        android:text="@string/addBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15.0dip"
        android:layout_alignParentEnd="true"
        custom:rippleColor="@color/button_ripple"
        custom:srcCompat="@drawable/ic_add" />
</RelativeLayout>